changed bli medlem pil position, fixed hem event collapsing by pressing context eventExpander(x)

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -463,7 +463,7 @@ footer {
       img {
         filter: invert(1);
         position: relative;
-        top: 1.4px;
+        top: 1.2px;
       }
     }
 
